--- a/src/Day48_DI_Annotation/pom.xml
+++ b/src/Day48_DI_Annotation/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.springproj</groupId>
 	<artifactId>controller</artifactId>
-	<name>ch01_WebApp</name>
+	<name>Day48_DI_Annotation</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
