--- a/src_boot/Day137_second/pom.xml
+++ b/src_boot/Day137_second/pom.xml
@@ -77,6 +77,16 @@
 			<artifactId>mariadb-java-client</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		
+<!-- for websocket-->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		
+		
+		
 	</dependencies>
 
 	<build>
