--- a/src_boot/Day138_board/pom.xml
+++ b/src_boot/Day138_board/pom.xml
@@ -93,6 +93,12 @@
 			<optional>true</optional>
 		</dependency>
 		
+<!-- https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter -->
+		<dependency>
+		    <groupId>com.github.ulisesbocchio</groupId>
+		    <artifactId>jasypt-spring-boot-starter</artifactId>
+		    <version>2.1.2</version>
+		</dependency>		
 		
 	</dependencies>
 
